Basics are Done

--- a/ENIGMAxVSSUT/src/index.css
+++ b/ENIGMAxVSSUT/src/index.css
@@ -1,68 +1,209 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap");
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --accent-1: #b1c0ef;
+  --accent-2: #f2acac;
+  --accent-3: #fedd93;
+  --accent-4: #81b7bf;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  text-transform: uppercase;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 5rem;
+  font-weight: 900;
+  line-height: 1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+p {
+  font-family: "Host Grotesk", sans-serif;
+  text-transform: uppercase;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.hero, .outro {
+  position: relative;
+  width: 100vw;
+  height: 100svh;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #f9f4eb;
+  color: #141414;
 }
+
+.hero {
+  flex-direction: column;
+}
+
+.hero h1 {
+  margin-bottom: 1.5rem;
+}
+
+.sticky-cards {
+  position: relative;
+  width: 100vw;
+  background-color: #0f0f0f;
+}
+
+.card {
+  position: sticky;
+  width: 100%;
+  height: 125svh;
+  transform-style: preserve-3d;
+  perspective: 1000px;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  transform-origin: 50% 100%;
+  will-change: transform;
+  text-align: center;
+}
+
+#card-1 .card-inner {
+  background-color: var(--accent-1);
+}
+
+#card-2 .card-inner {
+  background-color: var(--accent-2);
+}
+
+#card-3 .card-inner {
+  background-color: var(--accent-3);
+}
+
+#card-4 .card-inner {
+  background-color: var(--accent-4);
+}
+
+.card-info {
+  width: 25%;
+  padding: 3rem;
+  text-align: left;
+}
+
+.card-info p {
+  font-size: 0.9rem;
+}
+
+.card-title h1 {
+  font-size: 10rem;
+  padding: 1.2rem 0;
+}
+
+.card-description {
+  width: 60%;
+  margin: 0 auto 2rem auto;
+}
+
+.card {
+  font-size: 1.5rem;
+}
+
+.card-img {
+  width: 100%;
+  height: 100%;
+  /* margin-top: 4rem; */
+  margin-top: 1rem;
+  overflow: hidden;
+}
+
+.card-inner::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: var(--after-opacity, 0);
+  will-change: opacity;
+  pointer-events: none;
+  z-index: 2;
+}
+
+.banner {
+  position: relative;
+  width: 100vw;
+  height: 100svh;
+  background-color: #e3e3db;
+  color: #141414;
+  overflow: hidden;
+}
+
+.banner-img-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  will-change: transform;
+}
+
+.banner-img-container .img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  will-change: transform;
+}
+
+.banner-img-container .img.mask {
+  -webkit-mask-image: url("/img/img-hoodie-mask.png");
+  mask-image: url("/img/img-hoodie-mask.png");
+  -webkit-mask-size: cover;
+  mask-size: cover;
+  -webkit-mask-position: center;
+  mask-position: center;
+}
+
+.banner-header {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 75%;
+  color: #e3e3db;
+  z-index: 2;
+}
+
+.banner-intro-text-container {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  display: flex;
+  gap: 1rem;
+  z-index: 10;
+}
+
+.banner-intro-text {
+  flex: 1;
+  position: relative;
+  will-change: transform;
+}
+
+.banner-intro-text:nth-child(1) {
+  display: flex;
+  justify-content: flex-end;
+}
+
