--- a/ENIGMAxVSSUT/src/index.css
+++ b/ENIGMAxVSSUT/src/index.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap");
 
 :root {
-  --accent-1: #b1c0ef;
+  /* --accent-1: #b1c0ef; */
+  --accent-1: #8dd45d;
   --accent-2: #f2acac;
   --accent-3: #fedd93;
   --accent-4: #81b7bf;
@@ -52,6 +53,21 @@ p {
 
 .hero h1 {
   margin-bottom: 1.5rem;
+  color: #ffffff;
+  user-select: none;
+}
+
+.hero p{
+  color: #fff;
+}
+
+#introCanvas {
+  position: absolute;
+  z-index: -1;
+}
+
+.hero {
+  background: transparent;
 }
 
 .sticky-cards {
