--- a/ENIGMAxVSSUT/src/index.css
+++ b/ENIGMAxVSSUT/src/index.css
@@ -56,7 +56,8 @@ p {
 
 .outro {
   margin-top: 3px;
-  background-color: #060606b2;
+  /* background-color: #06060600; */
+  background-color: transparent;
   height: 100svh;
 }
 
