--- a/ENIGMAxVSSUT/src/index.css
+++ b/ENIGMAxVSSUT/src/index.css
@@ -55,7 +55,7 @@ p {
 }
 
 .outro {
-  margin-top: 3px;
+  /* margin-top: 3px; */
   /* background-color: #06060600; */
   background-color: transparent;
   height: 100svh;
@@ -218,8 +218,8 @@ p {
 }
 
 .banner-img-container .img.mask {
-  -webkit-mask-image: url("/img/img-hoodie-mask.png");
-  mask-image: url("/img/img-hoodie-mask.png");
+  -webkit-mask-image: url("/img2/lapMask.png");
+  mask-image: url("/img2/lapMask.png");
   -webkit-mask-size: cover;
   mask-size: cover;
   -webkit-mask-position: center;
@@ -228,7 +228,7 @@ p {
 
 .banner-header {
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
