--- a/ENIGMAxVSSUT/src/index.css
+++ b/ENIGMAxVSSUT/src/index.css
@@ -258,3 +258,81 @@ p {
   justify-content: flex-end;
 }
 
+.img-for-page {
+  position: absolute;
+  z-index: 11;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.scatter-img {
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  position: absolute;
+}
+
+#img1 {
+  top: -30%;
+  left: -30%;
+  width: 280px;
+  height: 200px;
+}
+
+#img1 img{
+  border-radius: 1rem;
+}
+
+#img2 {
+  top: 10%;
+  left: 45%;
+  height: 130px;
+  width: 160px;
+}
+
+#img2 img {
+  border-radius: 2rem;
+}
+
+#img3 {
+  top: -20%;
+  left: 120%;
+  width: 270px;
+  height: 200px;
+}
+
+#img3 img {
+  border-radius: 1.4rem;
+}
+
+#img4 {
+  top: 100%;
+  left: -10%;
+  width: 140px;
+}
+
+#img4 img {
+  border-radius: 1rem;
+}
+
+#img5 {
+  top: 70%;
+  left: 45%;
+  width: 160px;
+}
+#img5 img {
+  border-radius: 1.7rem;
+}
+
+#img6 {
+  top: 100%;
+  left: 110%;
+  width: 300px;
+  height: 240px;
+}
+#img6 img {
+  border-radius: 1rem;
+}
+
