--- a/ENIGMAxVSSUT/src/index.css
+++ b/ENIGMAxVSSUT/src/index.css
@@ -12,6 +12,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* overflow-x: hidden; */
 }
 
 img {
@@ -46,6 +47,8 @@ p {
   background-color: #f9f4eb;
   color: #141414;
 }
+
+
 
 #outroCanvas {
   position: absolute;
@@ -189,13 +192,85 @@ p {
   z-index: 2;
 }
 
+.stay{
+  position: relative;
+  width: 100vw;
+  height: 100%;
+  overflow-x: hidden;
+  background-color: #fff;  
+
+}
+
+.stay-container {
+  display: flex;
+  width: 100%;
+  overflow-x: hidden;
+
+}
+
+.stay-left {
+  width: 50%;
+}
+
+.stay-right {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  position: sticky;
+  top: 0;
+}
+
+.stay-page {
+  height: 110vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 5rem;
+}
+
+.stay h2 {
+  font-size: 2rem;
+  text-align: left;
+  margin-bottom: 1rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.stay p {
+  font-size: 1rem;
+  text-align: left;
+}
+
+.stay-images {
+  position: relative;
+  width: 400px;
+  height: 600px;
+}
+
+.stay-images img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 2rem;
+  /* border: #2224217b solid 2px; */
+}
+
+
+
+
 .banner {
   position: relative;
   width: 100vw;
   height: 100svh;
-  background-color: #e3e3db;
+  /* background-color: #e3e3db; */
+  background-color: #ffffff;
   /* background-color: transparent; */
   color: #141414;
+  overflow-x: hidden;
   overflow: hidden;
 }
 
@@ -286,7 +361,7 @@ p {
 }
 
 #img2 {
-  top: 10%;
+  top: -20%;
   left: 45%;
   height: 130px;
   width: 160px;
@@ -318,7 +393,7 @@ p {
 }
 
 #img5 {
-  top: 70%;
+  top: 110%;
   left: 45%;
   width: 160px;
 }
