--- a/ENIGMAxVSSUT/src/index.css
+++ b/ENIGMAxVSSUT/src/index.css
@@ -208,7 +208,8 @@ p {
   width: 100vw;
   height: 100%;
   overflow-x: hidden;
-  background-color: #fff;  
+  /* background-color: #fff;   */
+  background-color: transparent;  
 
 }
 
@@ -216,6 +217,8 @@ p {
   display: flex;
   width: 100%;
   overflow-x: hidden;
+  position: relative;
+  z-index: 1;
 
 }
 
@@ -224,11 +227,11 @@ p {
 }
 
 .stay-right {
-  width: 50%;
+  width: 70%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* height: 100vh; */
   position: sticky;
   top: 0;
 }
@@ -238,25 +241,30 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0 5rem;
+  /* padding: 0 5rem; */
 }
 
 .stay h2 {
-  font-size: 2rem;
-  text-align: left;
+  font-size: 8rem;
+  /* text-align: right; */
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
   margin-bottom: 1rem;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Barlow Condensed", sans-serif;
+  font-weight: 800;
 }
 
-.stay p {
+/* .stay p {
   font-size: 1rem;
   text-align: left;
-}
+} */
 
 .stay-images {
+  top: 2.5%;
   position: relative;
-  width: 400px;
-  height: 600px;
+  width: 300px;
+  height: 500px;
 }
 
 .stay-images img {
@@ -267,7 +275,39 @@ p {
   height: 100%;
   object-fit: cover;
   border-radius: 2rem;
-  border: #2224217b solid 2px; 
+  /* border: #2224217b solid 2px;  */
+}
+
+.stay-bg {
+  /* position: sticky; */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* display: flex; */
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+}
+
+.stay-bg-images {
+  top: 0%;
+  left: 0;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+
+.stay-bg-images img {
+  /* position: absolute; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* border-radius: 2rem; */
+  /* border: #2224217b solid 2px;  */
 }
 
 
