--- a/ENIGMAxVSSUT/src/index.css
+++ b/ENIGMAxVSSUT/src/index.css
@@ -1,259 +1,289 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap");
-
 :root {
-  /* --accent-1: #b1c0ef; */
-  --accent-1: #8dd45d;
-  --accent-2: #f2acac;
-  --accent-3: #fedd93;
-  --accent-4: #81b7bf;
+    /* --accent-1: #b1c0ef; */
+    --accent-1: #8dd45d;
+    --accent-2: #f2acac;
+    --accent-3: #fedd93;
+    --accent-4: #81b7bf;
 }
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  /* overflow-x: hidden; */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* overflow-x: hidden; */
 }
 
 img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 h1 {
-  text-transform: uppercase;
-  font-family: "Barlow Condensed", sans-serif;
-  font-size: 5rem;
-  font-weight: 900;
-  line-height: 1;
+    text-transform: uppercase;
+    font-family: "Barlow Condensed", sans-serif;
+    font-size: 5rem;
+    font-weight: 900;
+    line-height: 1;
 }
 
 p {
-  font-family: "Host Grotesk", sans-serif;
-  text-transform: uppercase;
-  font-weight: 500;
+    font-family: "Host Grotesk", sans-serif;
+    text-transform: uppercase;
+    font-weight: 500;
 }
 
-.hero, .outro {
-  position: relative;
-  width: 100vw;
-  height: 100svh;
-  /* padding: 2rem; */
-  display: flex;
-  justify-content: center;
-  /* align-items: center; */
-  text-align: center;
-  background-color: #f9f4eb;
-  color: #141414;
+.hero,
+.outro {
+    position: relative;
+    width: 100vw;
+    height: 100svh;
+    /* padding: 2rem; */
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    text-align: center;
+    background-color: #f9f4eb;
+    color: #141414;
 }
-
-
 
 #outroCanvas {
-  position: absolute;
-  width: 100vw;
-  height: 100svh;
-  z-index: -1;
+    position: absolute;
+    width: 100vw;
+    height: 100svh;
+    z-index: -1;
 }
 
 .outro {
-  /* margin-top: 3px; */
-  /* background-color: #06060600; */
-  background-color: transparent;
-  height: 100svh;
+    /* margin-top: 3px; */
+    /* background-color: #06060600; */
+    background-color: transparent;
+    height: 100svh;
 }
 
 .outro h1 {
-  color: #fff;
-  font-size: 6.5rem;
+    color: #fff;
+    font-size: 6.5rem;
 }
 
 .hero {
-  flex-direction: column;
-  object-fit: cover;
-  /* height: 120svh; */
-  overflow-x: none;
-
+    flex-direction: column;
+    object-fit: cover;
+    /* height: 120svh; */
+    overflow-x: none;
 }
+
 .hero img {
-  position: absolute;
-  z-index: -1;
+    position: absolute;
+    z-index: -1;
 }
 
 .hero h1 {
-  z-index: 2;
-  margin-bottom: 1.5rem;
-  color: #ffffff;
-  user-select: none;
-  font-size: 9rem;
-  /* top: 70%; */
+    z-index: 2;
+    margin-bottom: 1.5rem;
+    color: #ffffff;
+    user-select: none;
+    font-size: 9rem;
+    /* top: 70%; */
 }
 
-.hero p{
-  color: #fff;
+.hero p {
+    color: #fff;
 }
 
 #introCanvas {
-  position: absolute;
-  z-index: -1;
+    position: absolute;
+    z-index: -1;
 }
 
 .hero {
-  background: transparent;
+    background: transparent;
 }
 
 .sticky-cards {
-  position: relative;
-  width: 100vw;
-  background-color: #0f0f0f;
+    position: relative;
+    width: 100vw;
+    background-color: #0f0f0f;
 }
 
 .card {
-  position: sticky;
-  width: 100%;
-  height: 125svh;
-  transform-style: preserve-3d;
-  perspective: 1000px;
+    position: sticky;
+    width: 100%;
+    height: 125svh;
+    transform-style: preserve-3d;
+    perspective: 1000px;
 }
 
 .card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  transform-origin: 50% 100%;
-  will-change: transform;
-  text-align: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    transform-origin: 50% 100%;
+    will-change: transform;
+    text-align: center;
 }
 
 #card-1 .card-inner {
-  background-color: var(--accent-1);
+    background-color: var(--accent-1);
 }
 
 #card-2 .card-inner {
-  background-color: var(--accent-2);
+    background-color: var(--accent-2);
 }
 
 #card-3 .card-inner {
-  background-color: var(--accent-3);
+    background-color: var(--accent-3);
 }
 
 #card-4 .card-inner {
-  background-color: var(--accent-4);
+    background-color: var(--accent-4);
 }
 
 #card-5 .card-inner {
-  background-color: rgb(222, 85, 85);
+    background-color: rgb(222, 85, 85);
 }
 
 #card-6 .card-inner {
-  background-color: rgb(149, 222, 85);
+    background-color: rgb(149, 222, 85);
 }
 
 #card-7 .card-inner {
-  background-color: rgb(119, 132, 252);
+    background-color: rgb(119, 132, 252);
 }
 
-
 .card-info {
-  width: 25%;
-  padding: 3rem;
-  text-align: left;
+    width: 25%;
+    padding: 3rem;
+    text-align: left;
 }
 
 .card-info p {
-  font-size: 0.9rem;
+    font-size: 0.9rem;
 }
 
 .card-title h1 {
-  font-size: 10rem;
-  padding: 1.2rem 0;
+    font-size: 10rem;
+    padding: 1.2rem 0;
 }
 
 .card-description {
-  width: 60%;
-  margin: 0 auto 2rem auto;
+    width: 60%;
+    margin: 0 auto 2rem auto;
 }
 
 .card {
-  font-size: 1.5rem;
+    font-size: 1.5rem;
 }
 
 .card-img {
-  width: 100%;
-  height: 100%;
-  /* margin-top: 4rem; */
-  margin-top: 1rem;
-  overflow: hidden;
+    width: 100%;
+    height: 100%;
+    /* margin-top: 4rem; */
+    margin-top: 1rem;
+    overflow: hidden;
 }
 
 .card-inner::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  opacity: var(--after-opacity, 0);
-  will-change: opacity;
-  pointer-events: none;
-  z-index: 2;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: var(--after-opacity, 0);
+    will-change: opacity;
+    pointer-events: none;
+    z-index: 2;
 }
 
-.stay{
-  position: relative;
-  width: 100vw;
-  height: 100%;
-  overflow-x: hidden;
-  /* background-color: #fff;   */
-  background-color: transparent;  
+.do {
+    width: 100vw;
+    height: 140vh;
+    z-index: 2;
+    overflow-x: hidden;
+    background-color: transparent;
+    object-fit: cover;
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
 
+.do img {
+    z-index: -1;
+    position: absolute;
+    top: 0;
+}
+
+.do h1 {
+    color: #000000;
+    font-size: 16rem;
+    position: absolute;
+    top: 45%;
+}
+
+
+/* 
+.do p {
+    color: #000000;
+    position: absolute;
+    top: 63%;
+    font-weight: 700;
+} */
+
+.stay {
+    position: relative;
+    width: 100vw;
+    height: 100%;
+    overflow-x: hidden;
+    /* background-color: #fff;   */
+    background-color: transparent;
 }
 
 .stay-container {
-  display: flex;
-  width: 100%;
-  overflow-x: hidden;
-  position: relative;
-  z-index: 1;
-
+    display: flex;
+    width: 100%;
+    overflow-x: hidden;
+    position: relative;
+    z-index: 1;
 }
 
 .stay-left {
-  width: 50%;
+    width: 50%;
 }
 
 .stay-right {
-  width: 70%;
-  display: flex;
-  /* align-items: center; */
-  /* justify-content: center; */
-  /* height: 100vh; */
-  position: sticky;
-  top: 0;
+    width: 70%;
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* height: 100vh; */
+    position: sticky;
+    top: 0;
 }
 
 .stay-page {
-  height: 110vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  /* padding: 0 5rem; */
+    height: 110vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* padding: 0 5rem; */
 }
 
 .stay h2 {
-  font-size: 8rem;
-  /* text-align: right; */
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 1rem;
-  font-family: "Barlow Condensed", sans-serif;
-  font-weight: 800;
+    font-size: 8rem;
+    /* text-align: right; */
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+    font-family: "Barlow Condensed", sans-serif;
+    font-weight: 800;
 }
+
 
 /* .stay p {
   font-size: 1rem;
@@ -261,227 +291,223 @@ p {
 } */
 
 .stay-images {
-  top: 2.5%;
-  position: relative;
-  width: 300px;
-  height: 500px;
+    top: 2.5%;
+    position: relative;
+    width: 300px;
+    height: 500px;
 }
 
 .stay-images img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 2rem;
-  /* border: #2224217b solid 2px;  */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 2rem;
+    /* border: #2224217b solid 2px;  */
 }
 
 .stay-bg {
-  /* position: sticky; */
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  /* display: flex; */
-  top: 0;
-  left: 0;
-  z-index: -1;
-
+    /* position: sticky; */
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /* display: flex; */
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
 .stay-bg-images {
-  top: 0%;
-  left: 0;
-  position: relative;
-  width: 100vw;
-  height: 100vh;
+    top: 0%;
+    left: 0;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
 }
 
 .stay-bg-images img {
-  /* position: absolute; */
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  /* border-radius: 2rem; */
-  /* border: #2224217b solid 2px;  */
+    /* position: absolute; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* border-radius: 2rem; */
+    /* border: #2224217b solid 2px;  */
 }
-
-
-
 
 .banner {
-  position: relative;
-  width: 100vw;
-  height: 100svh;
-  /* background-color: #e3e3db; */
-  background-color: #ffffff;
-  /* background-color: transparent; */
-  color: #141414;
-  overflow-x: hidden;
-  overflow: hidden;
+    position: relative;
+    width: 100vw;
+    height: 100svh;
+    /* background-color: #e3e3db; */
+    background-color: #ffffff;
+    /* background-color: transparent; */
+    color: #141414;
+    overflow-x: hidden;
+    overflow: hidden;
 }
 
-
-
 .banner-img-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  will-change: transform;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    will-change: transform;
 }
 
 .banner-img-container .img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  will-change: transform;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    will-change: transform;
 }
 
 .banner-img-container .img.mask {
-  -webkit-mask-image: url("/img2/lapMask.png");
-  mask-image: url("/img2/lapMask.png");
-  -webkit-mask-size: cover;
-  mask-size: cover;
-  -webkit-mask-position: center;
-  mask-position: center;
+    -webkit-mask-image: url("/img2/lapMask.png");
+    mask-image: url("/img2/lapMask.png");
+    -webkit-mask-size: cover;
+    mask-size: cover;
+    -webkit-mask-position: center;
+    mask-position: center;
 }
 
 .banner-header {
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  width: 75%;
-  color: #e3e3db;
-  z-index: 2;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 75%;
+    color: #e3e3db;
+    z-index: 2;
 }
 
 .banner-intro-text-container {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 100%;
-  display: flex;
-  gap: 1rem;
-  z-index: 10;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    display: flex;
+    gap: 1rem;
+    z-index: 10;
 }
 
 .banner-intro-text {
-  flex: 1;
-  position: relative;
-  will-change: transform;
+    flex: 1;
+    position: relative;
+    will-change: transform;
 }
 
 .banner-intro-text:nth-child(1) {
-  display: flex;
-  justify-content: flex-end;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .img-for-page {
-  position: absolute;
-  z-index: 11;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+    position: absolute;
+    z-index: 11;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .scatter-img {
-  width: 120px;
-  height: 120px;
-  object-fit: cover;
-  position: absolute;
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    position: absolute;
 }
 
 #img1 {
-  top: -30%;
-  left: -30%;
-  width: 280px;
-  height: 200px;
+    top: -30%;
+    left: -30%;
+    width: 280px;
+    height: 200px;
 }
 
-#img1 img{
-  border-radius: 1rem;
+#img1 img {
+    border-radius: 1rem;
 }
 
 #img2 {
-  top: -20%;
-  left: 45%;
-  height: 130px;
-  width: 160px;
+    top: -20%;
+    left: 45%;
+    height: 130px;
+    width: 160px;
 }
 
 #img2 img {
-  border-radius: 2rem;
+    border-radius: 2rem;
 }
 
 #img3 {
-  top: -20%;
-  left: 120%;
-  width: 270px;
-  height: 200px;
+    top: -20%;
+    left: 120%;
+    width: 270px;
+    height: 200px;
 }
 
 #img3 img {
-  border-radius: 1.4rem;
+    border-radius: 1.4rem;
 }
 
 #img4 {
-  top: 100%;
-  left: -10%;
-  width: 140px;
+    top: 100%;
+    left: -10%;
+    width: 140px;
 }
 
 #img4 img {
-  border-radius: 1rem;
+    border-radius: 1rem;
 }
 
 #img5 {
-  top: 110%;
-  left: 45%;
-  width: 160px;
+    top: 110%;
+    left: 45%;
+    width: 160px;
 }
+
 #img5 img {
-  border-radius: 1.7rem;
+    border-radius: 1.7rem;
 }
 
 #img6 {
-  top: 100%;
-  left: 110%;
-  width: 300px;
-  height: 240px;
-}
-#img6 img {
-  border-radius: 1rem;
+    top: 100%;
+    left: 110%;
+    width: 300px;
+    height: 240px;
 }
 
+#img6 img {
+    border-radius: 1rem;
+}
 
 .cursor {
-  height: 5.6rem;
-  width:  5.6rem;    
-  /* background-color: white; */
-  background-color: #03081aba;
-  backdrop-filter: blur(10px);
-  border-radius: 50%;
-  position: fixed;
-  font-size: 7px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  z-index: 9;
-  opacity: 0;
-  font-size: 1.2rem;
-  color: #fff;
-  box-shadow: #ffffff 0.15rem 0.15rem 0.15rem;
+    height: 5.6rem;
+    width: 5.6rem;
+    /* background-color: white; */
+    background-color: #03081aba;
+    backdrop-filter: blur(10px);
+    border-radius: 50%;
+    position: fixed;
+    font-size: 7px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    z-index: 9;
+    opacity: 0;
+    font-size: 1.2rem;
+    color: #fff;
+    box-shadow: #ffffff 0.15rem 0.15rem 0.15rem;
 }
+
 
 /* 
 .staypage {
